#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
AP-2009-10-06-0: Bugfix:     o added switch_spooling for auto installation test
                             o disabled unneaded test for 6.1. versions
                             o fs fixes
                 Enhancem.:  o added is_bdb_server_running procedure
                 Review:     LP

CR-2009-10-05-0: Bugfix:     removed wait_for_enter in qstat test

JG-2009-10-05-0: Enhancem.:  added new test bugs/issuezilla/3129
                             added function remote_file_get_mtime to retrieve
                             the modification time of a file/directory.
                 Review:     CR

CR-2009-10-02-0: Bugfix:     fixed wrong version detection in testsuite which
                             expected qstat -help to exit with exit state 1
                             which was changed by a bugfix.
                 Review:     DG

LP-2009-09-30-0: Enhancem.:  Improved tests qmod_reschedule and path alias
                 Enhancem.:  start_qmaster fails early if qmaster startup exists
                             with non-zero exit code
                 Enhancem.:  Using actual instead of default timeouts for SMF
                             tests
                 Review:     JG

CR-2009-09-30-1: Bugfix:     fixed bug in CR-2009-09-30-0
                 Belongs To: CR-2009-09-30-0

CR-2009-09-30-0: Enhancem.:  added to features to tcl_files/file_procedures.tcl
                 Review:     JG

RH-2009-09-30-0: Enhancem.:  wait_for_remote_dir and wait_for_remote_file
                             uses external script to wait for files or 