@@ -6,6 +6,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+AP-2009-10-07-0: Enhancem.:  added basic test of 32bit binaries on 64bit platforms.
+                 Bugfix:     adjusted messages in add_rqs procedure.
+                 Review:     CR
+
 AP-2009-10-06-0: Bugfix:     o added switch_spooling for auto installation test
                              o disabled unneaded test for 6.1. versions
                              o fs fixes
